# surety

./: .gitignore
api/: main.py  pyproject.toml
dashboard/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml
dashboard/public/: index.html
dashboard/src/: App.css  App.js  index.css
dashboard/src/components/Body/: Article.css  Articles.js  Results.js  body.js  form.js  loader.js  userform.css
dashboard/src/components/Body/Teams/: TeamInfo.css  TeamInfo.js
dashboard/src/components/Header/: header.css  header.js  navbar.js
dashboard/src/components/Userform/: loader.js  userform.css  userform.js
dashboard/src/components/Zillowform/: zillowform.css  zillowform.js
