[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["sovitpy <sovitlekhak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.83.0"
uvicorn = "^0.18.3"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
